ADD: Ambiente nano sumô

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,11 @@ platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
 build_flags =
+    -D MICRO
+
+[env:nano]
+platform = espressif32
+board = esp32-c3-devkitm-1
+framework = arduino
+build_flags =
+    -D NANO
