--- a/platformio.ini
+++ b/platformio.ini
@@ -8,21 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c3-devkitm-1]
+[env:micro]
 platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
-
-[env:billie]
-platform = espressif32
-board = esp32-c3-devkitm-1
-framework = arduino
-build_flags =
-    -D MICRO
-
-[env:nano]
-platform = espressif32
-board = esp32-c3-devkitm-1
-framework = arduino
-build_flags =
-    -D NANO
+lib_deps =
+    arduino-libraries/ArduinoBLE
