ADD: Rodar o código com C++17

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env:micro]
 platform = espressif32
 board = esp32-c3-devkitm-1
+board_build.cppstd = gnu++17
 framework = arduino
 lib_deps =
     arduino-libraries/ArduinoBLE
